deployments/kube/postgres.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: postgres-service
# spec:
#   type: ClusterIP
#   clusterIP: None
#   selector:
#     app: postgres
#   ports:
#     - protocol: TCP
#       port: 5432
#       targetPort: postgresql

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: postgresql

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: docker.io/postgres:15
          ports:
            - name: postgresql
              containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          livenessProbe:
            exec:
              command: ["sh", "-c", "exec pg_isready --host 127.0.0.1"]
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command: ["sh", "-c", "exec pg_isready --host 127.0.0.1"]
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/pgdata
              name: postgres-data
              subPath: postgres-db
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
